--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -5755,3 +5755,55 @@
     model: S7
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; NX529Jq Build/LMY47V; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/73.0.3683.90 Mobile Safari/537.36 Instagram 87.0.0.18.99 Android (22/5.1.1; 480dpi; 1080x1920; nubia;
+    NX529Jq; NX529Jq; qcom; ru_RU; 148324051)
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 87.0.0.18.99
+  device:
+    type: smartphone
+    brand: ZTE
+    model: Nubia Z11 Mini
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; V210101 Build/LMY47V) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/39.0.0.0 Mobile Safari/537.36 Instagram 94.0.0.22.116 Android (22/5.1.1; 480dpi; 1080x1920; vargo; V21010
+  1; V210101; qcom; ru_RU; 155374064)
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 94.0.0.22.116
+  device:
+    type: smartphone
+    brand: Vargo
+    model: V210101
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 Linux; Android 5.1; ARK UKOZI U5 AppleWebKit/537.36 KHTML, like Gecko Chrome/75.0.3770.143 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 75.0.3770.143
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Ark
+    model: Ukozi U5
+  os_family: Android
+  browser_family: Chrome
