--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -7252,3 +7252,21 @@
     model: One Touch Pixi 7
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; Techno X800BJ) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.119 YaBrowser/19.3.3.288.01 Safari/537.36
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 19.3.3.288.01
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: BB Mobile
+    model: Techno 8.0" Mozg X800BJ
+  os_family: Android
+  browser_family: Unknown
