--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2385,7 +2385,7 @@ Assistant:
 
 # Ark (Ark Electronic Technology)
 Ark:
-  regex: '(ARK[_ -])?Benefit[_ -]([^/;]*)(?: Build|\))|Impulse[ _]P[12]|(?:EDGE A5HD|Elf_S8|ICON (R40\+|R45)|Wizard_[12])(?:[);/ ]|$)'
+  regex: '(ARK[_ -])?Benefit[_ -]([^/;]*)(?: Build|\))|Impulse[ _]P[12]|(?:EDGE A5HD|Elf_S8|ICON (R40\+|R45)|Wizard_[12]|UKOZI U5)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:ARK[_ -])?Benefit[_ -]([^/;]*)(?: Build|\))'
@@ -2402,6 +2402,8 @@ Ark:
       model: 'Wizard $1'
     - regex: 'Elf_S8(?:[);/ ]|$)'
       model: 'Elf S8'
+    - regex: 'UKOZI U5(?:[);/ ]|$)'
+      model: 'Ukozi U5'
 
 # Garmin-Asus
 Garmin-Asus:
@@ -18120,7 +18122,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A00[13]ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZR01|ZTG01|K8[37]CA)(?:[);/ ]|$)'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|503A|50[5678]J|51[0123]J|521J|523J_V1|529Jq?|5[345]1J|5[48]9J|569[HJ]|5[67]3J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A00[13]ZT|Z-01K|UZTE (?:GRAND V7|V808)|ZR01|ZTG01|K8[37]CA)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -18222,7 +18224,7 @@ ZTE:
       model: 'Nubia Z11 Max'
     - regex: '(?:NX549J|Nubia Z11 mini S)(?:[);/ ]|$)'
       model: 'Nubia Z11 Mini S'
-    - regex: '(?:NX529J|Nubia Z11 mini)(?:[);/ ]|$)'
+    - regex: '(?:NX529Jq?|Nubia Z11 mini)(?:[);/ ]|$)'
       model: 'Nubia Z11 Mini'
     - regex: 'NX606J(?:[);/ ]|$)'
       model: 'Nubia Z18'
@@ -20215,7 +20217,7 @@ Wortmann:
 
 # BB Mobile
 BB Mobile:
-  regex: 'bb-mobile|Techno[-_ ](8\.0|9\.7|TQ863Q|X595BT|S700BF|I700AJ|10.1 LTE TQ060X|7.0 LTE TQ763I|I785AP|I101BI)(?:[);/ ]|$)'
+  regex: 'bb-mobile|Techno[-_ ](8\.0|9\.7|TQ863Q|X595BT|X800BJ|S700BF|I700AJ|10.1 LTE TQ060X|7.0 LTE TQ763I|I785AP|I101BI)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'Techno[_ ]S700BF(?:[);/ ]|$)'
@@ -20228,6 +20230,8 @@ BB Mobile:
       model: 'Techno 7.0" Mozg LTE I700AJ'
     - regex: 'Techno[-_ ]I785AP(?:[);/ ]|$)'
       model: 'Techno 7.85" Mozg I785AP'
+    - regex: 'Techno[_ ]X800BJ(?:[);/ ]|$)'
+      model: 'Techno 8.0" Mozg X800BJ'
     - regex: 'Techno[-_ ]I101BI(?:[);/ ]|$)'
       model: 'Techno 10.1" Mozg I101BI'
     - regex: 'Techno[_ ]7.0 LTE TQ763I(?:[);/ ]|$)'
@@ -22882,4 +22886,12 @@ Gooweel:
   device: 'smartphone'
   models:
     - regex: 'Gooweel; (S7);'
+      model: '$1'
+
+# Vargo or Ivargo
+Vargo:
+  regex: 'Vargo[; _]|(?:V210101)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: '(V210101)(?:[);/ ]|$)'
       model: '$1'
