--- a/regexes/device-index-hash.yml
+++ b/regexes/device-index-hash.yml
@@ -29139,10 +29139,12 @@ ARIAN Space 70 ST7001RW:
   - Arian Space
 ARIAN Space 71 ST7002PG:
   - Arian Space
+  - Sony Ericsson
 ARIAN Space 80 SS8003PG:
   - Arian Space
 ARIAN Space 100 ST1004PG:
   - Arian Space
+  - Sony Ericsson
 A1-810:
   - Acer
 A1-811:
@@ -29949,6 +29951,7 @@ MK808:
   - Rikomagic
 mk808b:
   - Rikomagic
+  - Sony Ericsson
 GT-B9150:
   - Samsung
 Skyworth 8K55 E680:
