--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -5507,3 +5507,37 @@
     model: Vphone X3
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: com.google.android.apps.searchlite/63665 (Linux; U; Android 8.1.0; ru_UA; Ulefone_S1; Build/O11019; Cronet/90.0.4430.82)
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Google Go
+    version: ""
+  device:
+    type: smartphone
+    brand: Ulefone
+    model: S1
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10.0; MI 9T) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 91.0.4472.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Xiaomi
+    model: MI 9T
+  os_family: Android
+  browser_family: Chrome
