--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9356,3 +9356,21 @@
     model: WX3 Pro
   os_family: Android
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux; U; Android 7.0; TECNO F3 Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/76.0.3809.111 Mobile Safari/537.36 OPR/56.0.2254.57357
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    version: 56.0.2254.57357
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Tecno Mobile
+    model: Pop 1
+  os_family: Android
+  browser_family: Opera
