--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15477,8 +15477,6 @@ Tecno Mobile:
       model: 'Phantom 6'
     - regex: 'TECNO[ _]AB7(?:[);/ ]|$)'
       model: 'Phantom 9'
-    - regex: 'TECNO[ _]LC6a(?:[);/ ]|$)'
-      model: 'Pouvoir 3 Air'
     - regex: 'TECNO-W3'
       model: 'W3'
     - regex: 'TECNO[ _]F4 Pro(?:[);/ ]|$)'
@@ -15525,6 +15523,8 @@ Tecno Mobile:
       model: 'Camon 16 SE'
     - regex: 'Tecno[ _-]CG6(?:[);/ ]|$)'
       model: 'Camon 17'
+    - regex: 'TECNO[ _]F3(?:[);/ ]|$)'
+      model: 'Pop 1'
     - regex: 'TECNO[ _]LD7j?(?:[);/ ]|$)'
       model: 'Pova'
     - regex: 'Tecno[ _](?:KC8|KC2j?)(?:[);/ ]|$)'
@@ -15546,7 +15546,7 @@ Tecno Mobile:
     - regex: 'Tecno[ _]DP8D(?:[);/ ]|$)'
       model: 'DroidPad 8D'
       device: 'tablet'
-    - regex: 'TECNO[ _]LC6(?:[);/ ]|$)'
+    - regex: 'TECNO[ _]LC6a?(?:[);/ ]|$)'
       model: 'Pouvoir 3 Air'
     - regex: 'Tecno[ _]LB8a?'
       model: 'Pouvoir 3 Plus'
