--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15555,6 +15555,8 @@ Tecno Mobile:
       model: 'Spark 6 Air'
     - regex: 'TECNO[ _]KE5[jk]?(?:[);/ ]|$)'
       model: 'Spark 6 Go'
+    - regex: 'TECNO[ _]KF7j(?:[);/ ]|$)'
+      model: 'Spark 7P'
     - regex: 'Tecno[ _]DP8D(?:[);/ ]|$)'
       model: 'DroidPad 8D'
       device: 'tablet'
